Add csv read\write class

--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,12 @@
             "email": "semen.emelianov@simbirsoft.com"
         }
     ],
-    "require": {},
+    "require": {
+    },
     "autoload": {
-        "psr-4": {"Cert\\": "src/"}
+        "psr-4": {
+          "Cert\\": "src/",
+          "Application\\" : "app/"
+        }
     }
 }
